# PaooGo

./: .gitignore  README.md  build.gradle
.github/workflows/: android.yml  debug-apk.yml
android/: build.gradle  proguard-project.txt
android/src/androidTest/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml  paoogo.mdz
android/src/main/assets/katago/: gtp_human.cfg  gtp_jp.cfg
android/src/main/cpp/: CMakeLists.txt
android/src/main/res/layout/: activity_about.xml  activity_game_start.xml  base_container.xml  game.xml  game_extra_review.xml  review_button_container.xml  top_nav_and_extras.xml
android/src/main/res/menu/: game_start.xml  ingame_review.xml  ingame_score.xml  ingame_vs.xml
android/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/src/main/res/values-ca/: strings.xml
android/src/main/res/values-de/: strings.xml
android/src/main/res/values-es/: strings.xml
android/src/main/res/values-fr/: strings.xml
android/src/main/res/values-it/: strings.xml
android/src/main/res/values-ja/: strings.xml
android/src/main/res/values-pl/: strings.xml
android/src/main/res/values-ru/: strings.xml
android/src/main/res/values-sv/: strings.xml
android/src/main/res/values-zh-rCN/: strings.xml
android/src/main/res/values-zh-rTW/: strings.xml
android/src/withAutostart/: AndroidManifest.xml
android/src/withCloud/: AndroidManifest.xml
ray_params_backup/sim_params/: CaptureFeature.txt  PreviousDistance.txt
ray_params_backup/uct_params/: MoveDistance4.txt  Pass.txt  PosID.txt
(+97 files in other folders)
